fix header padding (FAQ hid behind header)

--- a/static/css/docs.css
+++ b/static/css/docs.css
@@ -13,6 +13,7 @@ body {
   background-color: #fff;
   background-repeat: repeat-x;
   background-position: 0 40px;
+  padding-top: 40px;
 }
 
 
@@ -84,7 +85,6 @@ hr.soften {
 
 /* Masthead (docs home) */
 .masthead {
-  padding-top: 36px;
   margin-bottom: 72px;
 }
 .masthead h1,
